Add OpenAL sound system and volume control